--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
 }
 
-/*HOJA DE ESTILOS*/
+/*ESTILOS UNIVERSALES*/
 
 * {
     padding: 0;
@@ -15,295 +15,186 @@
     font-family: 'Roboto', sans-serif; /*font descargada*/
 }
 
-/* -----------------HEADER Y BARRA DE NAVEGACION----------------- */
+.body__bg {
+  background-color: #bcbbb7;
+}
+
+/*BARRA DE NAVEGACION*/
 
 .header {
-    background: transparent;
-    z-index: 100;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-.header__nav {
-    padding: 25px 0;
+    z-index: 10;
 }
 
 .header__nav__row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1250px;
-    margin: auto;
-    padding: 0 30px;
-    height: 100%;
+    max-width: 78rem;
 }
 
-/*Logo nav*/
-.nav__logo {
-    color: rgb(0, 0, 0);
-    font-size: 35px;
-    font-weight: 600;
-    text-decoration: none;
+#nav__logo {
+  color: #fff;
 }
 
-/*Links de la barNav*/
-.header__nav ul {
-    display: inline-flex;
+/*anclas Nav Bar (links)*/
+#nav__link {
+    color: #fff;
+    font-size: 1.1rem; /*tamano de la letra*/
+    transition: all 0.3s; /*animacion para link*/
 }
 
-.header__nav ul li {
-    list-style-type: none;
+#nav__link:hover { /*Elementos <a> cuando el mouse esté posicionado sobreellos*/
+    color: rgb(133, 133, 133);
 }
 
-.header__nav ul li a {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 18px; /*tamano de la letra*/
-    margin-left: 30px; /*separacion entre links*/
-    transition: all 0.3s; /*animacion para link*/ 
-}
-
-.header__nav ul li a:hover { /*Elementos <a> cuando el mouse esté posicionado sobreellos*/
-    color: rgb(50, 50, 50);
-}
-
-
-/*ESTILOS DEL MAIN (INDEX)*/
-
+/* -----------------MAIN----------------- */
+  
+/* Background of main */
 .banner {
- /*imagen de fondo del Main */
+    /*imagen de fondo del Main */
     height: 100vh;
     background-image: url("../assets/img/desksetup-main.jpg");
-/* posicion de la imagen */
+    /* posicion de la imagen */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-/* effect background blur */
-    filter: blur(8px);
-    -webkit-filter: blur(8px); 
+    z-index: -1;
+    /* effect background */
+    filter: brightness(50%) blur(0.2rem);
 }
 
-/*main {
-    background-color: rgb(97, 69, 69);
-    height: 100vh;
-} */
-
+/* tittle first section */
 .main__tittle {
-    display: inline-flex;
-    text-align: left;
-    width: 30vw;
-    height: auto;
-    padding: 12px;
-/* posicion del main__tittle */
-    position: absolute;
-    top: 30%;
-    left:5%;
-    z-index: 10;
-/* estilos del main__tittle */
     border: 3px solid white;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0, 0.4);
 }
 
-.main__tittle h1 {
-color: rgb(255, 255, 255);
+.main__tittle span {
+    color: #bcbbb7;
 }
 
-.main__tittle h1 span {
-    color: rgb(255, 255, 255);
-}
-
-/*cards main*/
-
-.section__cards {
-    width: 30vw;
-    height: auto;
-    text-align: center;
-    position: absolute;
-    left: 60%;
-    top: 30%;
-}
-
-.section__cards__tittle {
-    color: rgb(255, 255, 255);
-    margin-bottom: 20px;
-    font-weight: 500;
-}
-
-.content__cards {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.card{
-    width: 50%;
-    /*estilados de cards*/
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.4);
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    border-radius: 1px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 15px;
-    z-index: 10;
-    transition: all 0.5s;
-}
-
-
-.card img {
-    width: 90%;
-    height: 80%;
-    object-fit: cover;
-    margin-bottom: 5px;
-}
-
-.card:hover {
-    cursor: pointer;
-    transform: scale(1.05);
-}
-
-.card__text {
-    color: rgb(255, 255, 255);
-    font-family: 'Alegreya Sans';
-}
+/* .img__first {
+  width: 31rem;
+  height: 31rem;
+} */
 
 /* -----------------FOOTER----------------- */
 
-.footer {
-    background-color: rgba(0, 0, 0, 0.910);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap; /*PROPIEDAD A VER*/
-    justify-content: space-between;
-    align-items: center;
+.footer__icon {
+    color: #fff;
+}
+
+.footer__icon:hover { /*Elementos <i> del footer cuando el mouse esté posicionado sobreellos*/
+    color: rgb(133, 133, 133);
+    transition: all 0.3s;
+}
+
+/* -----------------CARD----------------- */
+
+
+/*.container__cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+.container__cards a {
+margin: 0 10px;
+}*/
+
+  
+  .card {
+    --blur: 16px;
+    --size: clamp(300px, 50vmin, 600px);
+    width: var(--size);
+    aspect-ratio: 4 / 3;
+    position: relative;
+    border-radius: 2rem;
+    overflow: hidden;
+    color: #000;
+    transform: translateZ(0);
+  }
+  
+  .card__img {
+    width: 100%;
     height: 100%;
-}
-
-.footer__map {
-    display: flex;
-    margin-left: 20px;
-}
-
-/*Links del footer*/
-
-.footer__nav {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-.footer__nav ul li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 0 10px;
-}
-
-.footer__nav ul li a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-}
-
-.footer__nav ul li a:active {
-    color: rgb(117, 117, 117);
-}
-
-/*iconos de instagram y facebook*/
-
-.footer__icons a {
-    margin: 0 5px;
-    
-}
-
-.footer__icons a i {
-    color: rgb(255, 255, 255);
-}
-
-/*Texto de derechos y developed*/
-
-.footer__text {
-    margin-right: 20px;
-    text-align: center;
-}
-.footer__text p {
-    color: rgb(255, 255, 255);
-    font-size: 0.8em;
-}
-
-.footer__text a {
-    text-decoration: none;
-    color: white;
-    font-size: 0.8em;
-}
-
-/*Media index*/
-@media screen and (max-width: 720px) {
-    #nav__links {
-        display: none;
-    }
-
-    .nav__logo {
-        color: rgb(0, 0, 0);
-        font-size: 4vh;
-        font-weight: 600;
-        text-decoration: none;
-        padding: 30px 0;
-    }
-
-    .header__nav {
-        height: 6vh;
-    }
-
-    .banner {
-    width: 100vw;
-        
-    }
-    .main__tittle {
-    display: inline-flex;
-    text-align: left;
-    padding: 12px;
+    object-fit: cover;
+    transform: scale(calc(1 + (var(--hover, 0) * 0.25)));
+    transition: transform 0.2s;
+  }
+  
+  .card__footer {
+    padding: 0 1.5rem;
     position: absolute;
-    top: 20%;
-    left:40%;
-    }
-
-    .section__cards {
-        width: 30%;
-        height: auto;
-        position: absolute;
-        left: 40%;
-        top: 60%;
-    }
-
-    
-
-    .footer {
-        width: 100vh;
-
-    }
-
-    .footer__map {
-        display: none ;
-    }
-
-    .footer__nav {
-        padding: 20px;
-    }
-
-}
-
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: grid;
+    gap: 0.5ch;
+    background: hsl(0 0% 100% / 0.5);
+    backdrop-filter: blur(var(--blur));
+    height: 30%;
+    align-content: center;
+  }
+  
+  .card__action {
+    position: absolute;
+    aspect-ratio: 1;
+    width: calc(var(--size) * 0.15);
+    bottom: 30%;
+    right: 1.5rem;
+    transform: translateY(50%)
+      translateY(
+        calc(
+          (var(--size) * 0.4)
+        )
+      )
+      translateY(calc(var(--hover, 0) * (var(--size) * -0.4)));
+    background: purple;
+    display: grid;
+    place-items: center;
+    border-radius: 0.5rem;
+    background: hsl(0 0% 100% / 0.5);
+  /*   backdrop-filter: blur(calc(var(--blur) * 0.5)); */
+    transition: transform 0.2s;
+  }
+  
+  .card__action svg {
+    aspect-ratio: 1;
+    width: 50%;
+  }
+  
+  .card__footer span:nth-of-type(1) {
+    font-size: calc(var(--size) * 0.065);
+  }
+  
+  .card__footer span:nth-of-type(2) {
+    font-size: calc(var(--size) * 0.035);
+  }
+  
+  .card:is(:hover, :focus-visible) {
+    --hover: 1;
+  }
 
 /* -----------------PRODUCTOS----------------- */
 
-.colorFondoBody {
-    background-color: #bcbbb7;
+.gale__bs a {
+  text-decoration: none;
 }
 
 /* -----------------NUESTRO TRABAJO----------------- */
 
+.np__img {
+  transition: all 0.5s;
+}
+
+.np__img:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
 /* -----------------CONCTACTO----------------- */
+
+.form__container {
+  background-color: #bcbbb7;
+  box-shadow: 0px 0px 19px 5px rgba( 0, 0, 0, 0.19 );
+}
