--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,7 @@
+/*Variables*/
+$color-primario: #fff;
+$color-secundario: #858585;
+
 /*Fonts Google*/
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300&family=Hind+Guntur&display=swap');
 
@@ -30,18 +34,18 @@
 }
 
 #nav__logo {
-  color: #fff;
+  color: $color-primario;
 }
 
 /*anclas Nav Bar (links)*/
 #nav__link {
-    color: #fff;
+    color: $color-primario;
     font-size: 1.1rem; /*tamano de la letra*/
     transition: all 0.3s; /*animacion para link*/
 }
 
 #nav__link:hover { /*Elementos <a> cuando el mouse esté posicionado sobreellos*/
-    color: rgb(133, 133, 133);
+    color: $color-secundario;
 }
 
 /* -----------------MAIN----------------- */
@@ -63,7 +67,7 @@
 
 /* tittle first section */
 .main__tittle {
-    border: 3px solid white;
+    border: 3px solid $color-primario;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0, 0.4);
 }
@@ -72,36 +76,19 @@
     color: #bcbbb7;
 }
 
-/* .img__first {
-  width: 31rem;
-  height: 31rem;
-} */
-
 /* -----------------FOOTER----------------- */
 
 .footer__icon {
-    color: #fff;
+    color: $color-primario;
 }
 
 .footer__icon:hover { /*Elementos <i> del footer cuando el mouse esté posicionado sobreellos*/
-    color: rgb(133, 133, 133);
+    color: $color-secundario;
     transition: all 0.3s;
 }
 
 /* -----------------CARD----------------- */
 
-
-/*.container__cards {
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
-}
-
-.container__cards a {
-margin: 0 10px;
-}*/
-
-  
   .card {
     --blur: 16px;
     --size: clamp(300px, 50vmin, 600px);
