--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
-/*Variables*/
-/*Fonts Google*/
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300&family=Hind+Guntur&display=swap");
-@font-face {
-  font-family: "Roboto";
-  src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
-}
-/*ESTILOS UNIVERSALES*/
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
+}
+body {
   font-family: "Roboto", sans-serif; /*font descargada*/
 }
 
@@ -18,7 +18,6 @@
   background-color: #bcbbb7;
 }
 
-/*BARRA DE NAVEGACION*/
 .header {
   z-index: 10;
 }
@@ -35,15 +34,13 @@
 #nav__link {
   color: #fff;
   font-size: 1.1rem; /*tamano de la letra*/
-  transition: all 0.3s; /*animacion para link*/
+  transition: all 0.3s; /*animacion para ancla*/
 }
 
 #nav__link:hover { /*Elementos <a> cuando el mouse esté posicionado sobreellos*/
   color: #858585;
 }
 
-/* -----------------MAIN----------------- */
-/* Background of main */
 .banner {
   /*imagen de fondo del Main */
   height: 100vh;
@@ -58,7 +55,6 @@
   filter: brightness(50%) blur(0.2rem);
 }
 
-/* tittle first section */
 .main__tittle {
   border: 3px solid #fff;
   background-color: rgb(0, 0, 0);
@@ -69,17 +65,6 @@
   color: #bcbbb7;
 }
 
-/* -----------------FOOTER----------------- */
-.footer__icon {
-  color: #fff;
-}
-
-.footer__icon:hover { /*Elementos <i> del footer cuando el mouse esté posicionado sobreellos*/
-  color: #858585;
-  transition: all 0.3s;
-}
-
-/* -----------------CARD----------------- */
 .card {
   --blur: 16px;
   --size: clamp(300px, 50vmin, 600px);
@@ -147,12 +132,10 @@
   --hover: 1;
 }
 
-/* -----------------PRODUCTOS----------------- */
 .gale__bs a {
   text-decoration: none;
 }
 
-/* -----------------NUESTRO TRABAJO----------------- */
 .np__img {
   transition: all 0.5s;
 }
@@ -162,10 +145,22 @@
   transform: scale(1.05);
 }
 
-/* -----------------CONCTACTO----------------- */
 .form__container {
   background-color: #bcbbb7;
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+}
+
+.footer__text {
+  font-size: 1.1rem;
+}
+
+.footer__icon {
+  color: #fff;
+  transition: all 0.3s;
+}
+
+.footer__icon:hover { /*Elementos <i> del footer cuando el mouse esté posicionado sobreellos*/
+  color: #858585;
 }
 
 /*# sourceMappingURL=styles.css.map */
