--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif; /*font descargada*/
+    font-family: 'Roboto', sans-serif; // Local Font
 }
 
 .body__bg {
