--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,4 +1,4 @@
-// google font 
+// Google font 
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300&family=Hind+Guntur&display=swap');
 
 // local font 
