--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,11 +1,12 @@
 .footer__text {
     font-size: $fuente-mid;
-  }
-  .footer__icon {
-      color: $color-primario;
-      transition: all 0.3s;
-  }
-  
-  .footer__icon:hover { /*Elementos <i> del footer cuando el mouse esté posicionado sobreellos*/
-      color: $color-secundario;
-  }
+}
+
+.footer__icon {
+    color: $color-primario;
+    transition: all 0.3s; // Animacion del <icon> / link
+}
+
+.footer__icon:hover { // Elementos <i> del footer cuando el mouse se posicione sobreellos
+    color: $color-secundario;
+}
