--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,22 +1,22 @@
-.header {
+header {
     z-index: 10;
-}
 
-.header__nav__row {
-    max-width: 78rem;
-}
+    .header__nav__row {
+        max-width: 78rem;
 
-#nav__logo {
-  color: $color-primario;
-}
+        #nav__logo {
+            color: $color-primario;
+          }
 
-/*anclas Nav Bar (links)*/
-#nav__link {
-    color: $color-primario;
-    font-size: $fuente-mid; // Size font
-    transition: all 0.3s; // Animacion del <a> / link
-}
+        /*anclas Nav Bar (links)*/
+        #nav__link {
+            color: $color-primario;
+            font-size: $fuente-mid; // Size font
+            transition: all 0.3s; // Animacion del <a> / link
 
-#nav__link:hover { // Elementos <a> cuando el mouse se posicione sobreellos
-    color: $color-secundario;
+            &:hover { // Elementos <a> cuando el mouse se posicione sobreellos
+                color: $color-secundario;
+            }
+        }
+    }
 }
