--- a/scss/_nuestro-trabajo.scss
+++ b/scss/_nuestro-trabajo.scss
@@ -1,10 +1,10 @@
 // Animacion para imgs
 .np__img {
   transition: all 0.5s;
-}
   
-.np__img:hover {
-  cursor: pointer;
-  transform: scale(1.05);
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+  }
 }
 //
