--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,54 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300&family=Hind+Guntur&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 @font-face {
   font-family: "Roboto";
   src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
 }
-body {
-  font-family: "Roboto", sans-serif; /*font descargada*/
-}
-
 .body__bg {
   background-color: #bcbbb7;
 }
 
-.header {
+header {
   z-index: 10;
 }
-
-.header__nav__row {
+header .header__nav__row {
   max-width: 78rem;
+  /*anclas Nav Bar (links)*/
 }
-
-#nav__logo {
+header .header__nav__row #nav__logo {
   color: #fff;
 }
-
-/*anclas Nav Bar (links)*/
-#nav__link {
+header .header__nav__row #nav__link {
   color: #fff;
-  font-size: 1.1rem; /*tamano de la letra*/
-  transition: all 0.3s; /*animacion para ancla*/
+  font-size: 1.1rem;
+  transition: all 0.3s;
 }
-
-#nav__link:hover { /*Elementos <a> cuando el mouse esté posicionado sobreellos*/
+header .header__nav__row #nav__link:hover {
   color: #858585;
 }
 
-.banner {
-  /*imagen de fondo del Main */
+main .banner {
   height: 100vh;
   background-image: url("../assets/img/desksetup-main.jpg");
-  /* posicion de la imagen */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  z-index: -1;
-  /* effect background */
+  z-index: -10;
   filter: brightness(50%) blur(0.2rem);
 }
-
-.main__tittle {
+main .main__tittle {
   border: 3px solid #fff;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
-
-.main__tittle span {
+main .main__tittle span {
   color: #bcbbb7;
 }
 
@@ -76,16 +63,14 @@ body {
   color: #000;
   transform: translateZ(0);
 }
-
-.card__img {
+.card .card__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transform: scale(calc(1 + var(--hover, 0) * 0.25));
   transition: transform 0.2s;
 }
-
-.card__footer {
+.card .card__footer {
   padding: 0 1.5rem;
   position: absolute;
   bottom: 0;
@@ -98,33 +83,10 @@ body {
   height: 30%;
   align-content: center;
 }
-
-.card__action {
-  position: absolute;
-  aspect-ratio: 1;
-  width: calc(var(--size) * 0.15);
-  bottom: 30%;
-  right: 1.5rem;
-  transform: translateY(50%) translateY(calc(var(--size) * 0.4)) translateY(calc(var(--hover, 0) * var(--size) * -0.4));
-  background: purple;
-  display: grid;
-  place-items: center;
-  border-radius: 0.5rem;
-  background: hsla(0, 0%, 100%, 0.5);
-  /*   backdrop-filter: blur(calc(var(--blur) * 0.5)); */
-  transition: transform 0.2s;
-}
-
-.card__action svg {
-  aspect-ratio: 1;
-  width: 50%;
-}
-
-.card__footer span:nth-of-type(1) {
+.card .card__footer span:nth-of-type(1) {
   font-size: calc(var(--size) * 0.065);
 }
-
-.card__footer span:nth-of-type(2) {
+.card .card__footer span:nth-of-type(2) {
   font-size: calc(var(--size) * 0.035);
 }
 
@@ -139,7 +101,6 @@ body {
 .np__img {
   transition: all 0.5s;
 }
-
 .np__img:hover {
   cursor: pointer;
   transform: scale(1.05);
@@ -150,17 +111,15 @@ body {
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 }
 
-.footer__text {
-  font-size: 1.1rem;
-}
-
-.footer__icon {
+footer .footer__icon {
   color: #fff;
   transition: all 0.3s;
 }
-
-.footer__icon:hover { /*Elementos <i> del footer cuando el mouse esté posicionado sobreellos*/
+footer .footer__icon:hover {
   color: #858585;
+}
+footer .footer__text {
+  font-size: 1.1rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
