--- a/css/styles.css
+++ b/css/styles.css
@@ -113,10 +113,10 @@ main .main__tittle span {
 
 footer .footer__icon {
   color: #fff;
-  transition: all 0.3s;
+  transition: all 0.6s;
 }
 footer .footer__icon:hover {
-  color: #858585;
+  transform: translateY(-10px);
 }
 footer .footer__text {
   font-size: 1.1rem;
