se animo el footer en todas las paginas

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ main .main__tittle span {
   height: 100%;
   object-fit: cover;
   transform: scale(calc(1 + var(--hover, 0) * 0.25));
-  transition: transform 0.2s;
+  transition: 0.2s;
 }
 .card .card__footer {
   padding: 0 1.5rem;
