--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,4 +1,4 @@
 .form__container {
-    background-color: #bcbbb7;
+    background-color: $color-body;
     box-shadow: 0px 0px 19px 5px rgba( 0, 0, 0, 0.19 );
 }
