--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,4 +7,5 @@
 @import "productos.scss";
 @import "nuestro-trabajo.scss";
 @import "contacto.scss";
+@import "quienes-somos.scss";
 @import "footer.scss";
