--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,12 @@ main .banner {
   z-index: -10;
   filter: brightness(50%) blur(0.2rem);
 }
-main .main__tittle {
+main .index__tittle {
   border: 3px solid #fff;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
-main .main__tittle span {
+main .index__tittle span {
   color: #bcbbb7;
 }
 
@@ -94,21 +94,86 @@ main .main__tittle span {
   --hover: 1;
 }
 
-.gale__bs a {
+.main__productos .main__tittle {
+  align-items: center;
+}
+.main__productos .main__tittle b {
+  background-color: currentColor;
+  display: block;
+  flex: 1;
+  height: 2px;
+  opacity: 0.1;
+}
+.main__productos .gale__bs a {
   text-decoration: none;
 }
 
-.np__img {
+.main__nt .main__tittle {
+  align-items: center;
+}
+.main__nt .main__tittle b {
+  background-color: currentColor;
+  display: block;
+  flex: 1;
+  height: 2px;
+  opacity: 0.1;
+}
+.main__nt .nt__img {
   transition: all 0.5s;
 }
-.np__img:hover {
+.main__nt .nt__img:hover {
   cursor: pointer;
   transform: scale(1.05);
+}
+.main__nt p {
+  text-align: start;
+}
+@media screen and (max-width: 960px) {
+  .main__nt p {
+    text-align: center;
+  }
+}
+
+.main__contact .main__tittle {
+  align-items: center;
+}
+.main__contact .main__tittle b {
+  background-color: currentColor;
+  display: block;
+  flex: 1;
+  height: 2px;
+  opacity: 0.1;
 }
 
 .form__container {
   background-color: #bcbbb7;
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+}
+
+.main__qs {
+  /* Cuando la pantalla este en tablet/mobile
+  el texto se va alinear en el centro */
+}
+.main__qs .main__tittle {
+  align-items: center;
+  flex-flow: nowrap;
+  justify-content: space-between;
+  position: relative;
+}
+.main__qs .main__tittle b {
+  background-color: currentColor;
+  display: block;
+  flex: 1;
+  height: 2px;
+  opacity: 0.1;
+}
+.main__qs .container__parrafo {
+  text-align: start;
+}
+@media screen and (max-width: 960px) {
+  .main__qs .container__parrafo {
+    text-align: center;
+  }
 }
 
 footer .footer__icon {
