--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -14,7 +14,7 @@ main {
     filter: brightness(50%) blur(0.2rem);
   }
 
-  .main__tittle { // TITTLE 
+  .index__tittle { // TITTLE 
     border: 3px solid $color-primario;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0, 0.4);
