--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     .footer__icon {
-        color: $color-primario;
+        color: map-get($colors, primary);
         transition: all 0.6s; // Animacion del <icon> / link
         &:hover { // Elementos <i> del footer cuando el mouse se posicione sobreellos
             transform: translateY(-10px);
