--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,17 +5,17 @@ header {
         max-width: 78rem;
 
         #nav__logo {
-            color: $color-primario;
+            color: map-get($colors, primary);
           }
 
         /*anclas Nav Bar (links)*/
         #nav__link {
-            color: $color-primario;
+            color: map-get($colors, primary);
             font-size: $fuente-mid; // Size font
             transition: all 0.3s; // Animacion del <a> / link
 
             &:hover { // Elementos <a> cuando el mouse se posicione sobreellos
-                color: $color-secundario;
+                color: map-get($colors, secondary);
             }
         }
     }
