--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -15,7 +15,7 @@ main {
   }
 
   .index__tittle { // TITTLE 
-    border: 3px solid $color-primario;
+    border: 3px solid map-get($colors, primary);
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0, 0.4);
 
