--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,8 +4,8 @@
 @import "body.scss";
 @import "header.scss";
 @import "index.scss";
-@import "productos.scss";
-@import "nuestro-trabajo.scss";
-@import "contacto.scss";
-@import "quienes-somos.scss";
+@import "main-productos.scss";
+@import "main-nuestro-trabajo.scss";
+@import "main-contacto.scss";
+@import "main-quienes-somos.scss";
 @import "footer.scss";
