--- a/scss/_main-contacto.scss
+++ b/scss/_main-contacto.scss
@@ -2,11 +2,7 @@
     .main__tittle {
         align-items: center;
         b {
-            background-color: currentColor;
-            display: block;
-            flex: 1;
-            height: 2px;
-            opacity: .1;
+            @include mild-line;
         }
     }
  }
@@ -15,4 +11,3 @@
     background-color: map-get($colors, body);;
     box-shadow: 0px 0px 19px 5px rgba( 0, 0, 0, 0.19 );
 }
-
