--- a/scss/_main-nuestro-trabajo.scss
+++ b/scss/_main-nuestro-trabajo.scss
@@ -4,11 +4,7 @@
     .main__tittle {
         align-items: center;
           b {
-              background-color: currentColor;
-              display: block;
-              flex: 1;
-              height: 2px;
-              opacity: .1;
+              @include mild-line;
           }
     }
     .nt__img {
