--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 @import "mixin.scss";
 @import "reset.scss";
+@import "utilidades.scss";
 @import "fonts.scss";
 @import "body.scss";
 @import "header.scss";
