--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300&family=Hind+Guntur&display=swap");
+@keyframes rebote {
+  0%, 100% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-12px, -12px);
+  }
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+}
+
+#wspFixed {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 99;
+  width: 55px;
+  margin: 0 12px 12px 0;
+  animation: rebote 1.5s infinite;
 }
 
 @font-face {
