Modifique el background-color del index, Body.scss se elimino y las clases se agregaron en utilidades.

--- a/scss/_utilidades.scss
+++ b/scss/_utilidades.scss
@@ -1,4 +1,13 @@
+// Colores de los background 
+  .body__bg {
+    background-color: map-get($colors, body);
+}
+
+.body__main {
+    background-color: map-get($colors, body-dark);
+}
+
 // logo tipo anuncio
 #wspFixed {
-    @include wsp-fixed
-  }
+  @include wsp-fixed
+}
