--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@
   font-family: "Roboto", sans-serif;
 }
 
+.body__bg {
+  background-color: #bcbbb7;
+}
+
+.body__main {
+  background-color: #5e5e5d;
+}
+
 #wspFixed {
   position: fixed;
   bottom: 0;
@@ -28,10 +36,6 @@
   font-family: "Roboto";
   src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
 }
-.body__bg {
-  background-color: #bcbbb7;
-}
-
 header {
   z-index: 10;
 }
