--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,10 @@
-// variables
+// Variables
 $fuente-mid: 1.1rem;
 
-// mapa
+// Mapa SASS
 $colors: (
   primary: #fff,
   secondary: #858585,
   body: #bcbbb7,
+  body-dark :#5e5e5d,
 );
