Los links de la navbar en el menu de hamb. se movieron a la derecha.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,6 +3,7 @@ header {
 
     .header__nav__row {
         max-width: 78rem;
+        text-align: end;
 
         #nav__logo {
             color: map-get($colors, primary);
