--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ header {
 }
 header .header__nav__row {
   max-width: 78rem;
+  text-align: end;
   /*anclas Nav Bar (links)*/
 }
 header .header__nav__row #nav__logo {
