--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,14 @@ main .index__tittle span {
   background-color: #bcbbb7;
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 }
+.form__container .btn {
+  background-color: #5e5e5d;
+  border: none;
+  transition: all 0.4s;
+}
+.form__container .btn:hover {
+  background-color: #858585;
+}
 
 .main__qs {
   /* Cuando la pantalla este en tablet/mobile
