Se creo un boton 'sobre nosotros' en la seccion principal de la pagina. Se reacomodaron los containers en la galeria del sitio.

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,22 @@ main .banner {
 }
 main .index__tittle {
   border: 3px solid #fff;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
 main .index__tittle span {
   color: #bcbbb7;
+}
+main .index__btn__sb {
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 2px solid #fff;
+  border-radius: 4px;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+main .index__btn__sb:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+  color: #000;
 }
 
 .card {
