--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,8 @@ $fuente-mid: 1.1rem;
 // Mapa SASS
 $colors: (
   primary: #fff,
+  primary-dark: #000,
   secondary: #858585,
   body: #bcbbb7,
-  body-dark :#5e5e5d,
+  body-dark:#5e5e5d,
 );
