--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -13,7 +13,6 @@ main {
     // effect background
     filter: brightness(50%) blur(0.2rem);
   }
-
   .index__tittle { // TITTLE 
     border: 3px solid map-get($colors, primary); //Aplicando el mapa Colors, que dentro contiene Primary, usando "map-get".
     background-color: rgba(0,0,0, 0.4);
@@ -21,7 +20,6 @@ main {
       color: #bcbbb7;
     }
   }
-
   .index__btn__sb {
     background-color: rgba(0,0,0, 0.4);
     border: 2px solid map-get($colors, primary);
@@ -34,53 +32,34 @@ main {
       color: map-get($colors, primary-dark);
     }
   }
-}
-
 // SECOND SECTION 
-
-//-------- CARD
-.card {
-    --blur: 16px;
-    --size: clamp(300px, 50vmin, 600px);
-    width: var(--size);
-    aspect-ratio: 4 / 3;
-    position: relative;
-    border-radius: 2rem;
-    overflow: hidden;
-    color: #000;
-    transform: translateZ(0);
-
-    .card__img {
-        width: 100%;
-        height: 100%;
+  //cards
+  .content__cards {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    padding: .50rem 0 .50rem 0;
+    .card {
+      width: 400px;
+      height: 500px;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 8px;
+      border: none;
+      margin: 1.25rem;
+      padding: 0;
+      text-decoration: none;
+      transition: all 0.5s;
+      img {
+        width: 90%;
+        height: 80%;
         object-fit: cover;
-        transform: scale(calc(1 + (var(--hover, 0) * 0.25)));
-        transition: 0.2s;
+        margin: 1.25rem 0 1.25rem 0;
+      }
+      &:hover {
+        transform: scale(1.05);
+      }
     }
-
-    .card__footer {
-        padding: 0 1.5rem;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        display: grid;
-        gap: 0.5ch;
-        background: hsl(0 0% 100% / 0.5);
-        backdrop-filter: blur(var(--blur));
-        height: 30%;
-        align-content: center;
-
-          span:nth-of-type(1) {
-              font-size: calc(var(--size) * 0.065);
-          }
-
-          span:nth-of-type(2) {
-              font-size: calc(var(--size) * 0.035);
-          }
-    }
-}
-  
-.card:is(:hover, :focus-visible) {
-  --hover: 1;
+  }
 }
