--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -6,3 +6,8 @@
     font-family: "Roboto";
     src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
 }
+
+@font-face {
+    font-family: "Myriad";
+    src: url("../assets/fonts/Myriad/Myriad-Bold.ttf");
+}
