--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,4 +9,5 @@
 @import "main-nuestro-trabajo.scss";
 @import "main-contacto.scss";
 @import "main-quienes-somos.scss";
+@import "404.scss";
 @import "footer.scss";
