--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@
   font-family: "Roboto";
   src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
 }
+@font-face {
+  font-family: "Myriad";
+  src: url("../assets/fonts/Myriad/Myriad-Bold.ttf");
+}
 header {
   z-index: 10;
 }
@@ -205,6 +209,46 @@ main .content__cards .card:hover {
   .main__qs .container__parrafo {
     text-align: center;
   }
+}
+
+.container__gen {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 100px 0;
+}
+
+.container__img {
+  width: 1000px;
+}
+
+.container__text {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.container__text h1 {
+  display: inline;
+  font-family: Myriad;
+  font-weight: 600;
+  text-align: start;
+  margin-bottom: 0;
+}
+
+.container__text a {
+  text-decoration: none;
+  font-family: Myriad;
+  font-size: large;
+  background-color: #5e5e5d;
+  color: #fff;
+  padding: 8px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.container__text a:hover {
+  background-color: #000;
 }
 
 footer .footer__icon {
