--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,11 +15,18 @@ header {
         }
         /*anclas Nav Bar (links)*/
         #nav__link {
-            color: map-get($colors, primary);
+            color: map-get($colors, primary-dark);
             font-size: $fuente-mid; // Size font
-            transition: all 0.3s; // Animacion del <a> / link
+            transition: all 0.4s; // Animacion del <a> / link
 
             &:hover { // Elementos <a> cuando el mouse se posicione sobreellos
+                color: map-get($colors, body-dark);
+            }
+        }
+        #nav__link--index {
+            @extend #nav__link ;
+            color: map-get($colors, primary);
+            &:hover {
                 color: map-get($colors, secondary);
             }
         }
