se modifico el formulario de contactos y se agrego un iframe con un mapa

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,4 +10,5 @@ $colors: (
   body-dark:#5e5e5d,
   success: #9fe2839d,
   danger: #ff6a6a,
+  gradient: linear-gradient(to left, #8B00FF, #000080),
 );
