--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,6 +1,6 @@
 // Este mixin se aplica para los estilos de las lineas semi-transparentes en los titulos de las paginas.
 @mixin mild-line{
-    background-color: currentColor;
+    background-color: #fff;
     display: block;
     flex: 1;
     height: 2px;
