--- a/scss/_utilidades.scss
+++ b/scss/_utilidades.scss
@@ -1,6 +1,6 @@
 // Colores de los background 
   .body__bg {
-    background-color: map-get($colors, body);
+    background-color: map-get($colors, body-dark1);
 }
 
 .body__main {
