--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+    background: map-get($colors, gradient);
     .footer__icon {
         color: map-get($colors, primary);
         transition: all 0.6s; // Animacion del <icon> / link
@@ -8,5 +9,13 @@ footer {
     }
     .footer__text {
         font-size: $fuente-mid;
+        .jere {
+            color: map-get($colors, primary);
+            text-decoration: none;
+            transition: all 0.3s;
+            &:hover {
+                color: map-get($colors, secondary);
+            }
+        }
     }
 }
