--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,5 +10,6 @@ $colors: (
   body-dark:#5e5e5d,
   success: #9fe2839d,
   danger: #ff6a6a,
-  gradient: linear-gradient(to left, #8B00FF, #000080),
+  body-dark1: #373a3d,
+  gradient: linear-gradient(to right, #ff00f4, #da00f5, #b100f5, #7d00f5, #1f00f4),
 );
