--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,18 @@ main .content__cards .card img {
 main .content__cards .card:hover {
   transform: scale(1.05);
 }
+@media screen and (max-width: 768px) {
+  main .banner {
+    height: 100vh;
+    background-image: url("../assets/img/desksetup-main-mobile.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    z-index: -10;
+    filter: brightness(50%) blur(0.2rem);
+  }
+}
 
 .main__productos .main__tittle {
   align-items: center;
