--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,7 +3,7 @@ main {
   .banner { //Background of main
     // imagen de fondo del Main
     height: 100vh;
-    background-image: url("../assets/img/desksetup-main.jpg");
+    background-image: url("../assets/img/desksetup-main-mobile.webp");
     // posicion de la imagen
     background-position: center;
     background-repeat: no-repeat;
@@ -67,7 +67,7 @@ main {
     .banner { //Background of main
       // imagen de fondo del Main
       height: 100vh;
-      background-image: url("../assets/img/desksetup-main-mobile.jpg");
+      background-image: url("../assets/img/desksetup-main-mobile.webp");
       // posicion de la imagen
       background-position: center;
       background-repeat: no-repeat;
