--- a/scss/_main-productos.scss
+++ b/scss/_main-productos.scss
@@ -48,12 +48,12 @@
   }
 }
 
-// @media (hover: none) { 
-//   .cuadro__titulo {
-//       opacity: 1;
-//   }
+@media (hover: none) { 
+  .cuadro__titulo {
+      opacity: 1;
+  }
 
-//   .cuadro__img img {
-//       filter: blur(2px);
-//   }
-// }
+  .cuadro__img img {
+      filter: blur(2px);
+  }
+}
