se modifica un estilo en los botones del formulario de contacto que hacia que no se vean los botones

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ main .content__cards .desktop {
 }
 
 .form__container .btn {
-  background-color: #373a3d;
+  background-color: #858585;
   border: none;
   transition: all 0.4s;
 }
