--- a/scss/_main-contacto.scss
+++ b/scss/_main-contacto.scss
@@ -8,7 +8,7 @@
  }
 .form__container {
     .btn {
-        background-color: map-get($colors, body-dark);
+        background-color: map-get($colors, secondary);
         border: none;
         transition: all 0.4s;
         &:hover {
