--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,4 +14,5 @@ $colors: (
   danger: #ff6a6a,
   gradient: linear-gradient(to right, #ff00f4, #da00f5, #b100f5, #7d00f5, #1f00f4),
   background--050: #373a3d8a,
+  background--020: #373a3d5d,
 );
