--- a/css/styles.css
+++ b/css/styles.css
@@ -276,44 +276,45 @@ main .content__cards .desktop {
   }
 }
 
-.container__gen {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 100px 0;
-}
-
-.container__img {
-  width: 1000px;
-}
-
-.container__text {
+.contenedor {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
 }
-
-.container__text h1 {
-  display: inline;
-  font-family: Myriad;
-  font-weight: 600;
-  text-align: start;
-  margin-bottom: 0;
+.contenedor .img__404 {
+  width: 50%;
+  height: auto;
 }
-
-.container__text a {
-  text-decoration: none;
-  font-family: Myriad;
-  font-size: large;
-  background-color: #373a3d;
+.contenedor h1 {
   color: #fff;
-  padding: 8px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: all 0.2s;
+  margin: 0;
+  text-align: center;
+  display: block;
+  width: 50%;
 }
-.container__text a:hover {
+.contenedor .button {
+  background-color: #fff;
+  color: #000;
+  border-radius: 18px;
+  padding: 8px 17px 8px 17px;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.contenedor .button:hover {
   background-color: #000;
+  color: #fff;
+}
+@media screen and (max-width: 992px) {
+  .contenedor .img__404 {
+    width: 100%;
+    height: auto;
+  }
+  .contenedor .contenedor h1 {
+    width: 75%;
+  }
 }
 
 footer {
