--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,70 +1,41 @@
-.container__gen {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 100px 0;
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-
-}
-
-.container__img {
-    width: 1000px;
-    // margin-bottom: 2rem;
-}
-
-.container__text {
+.contenedor {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    
-//     // position: absolute;
-//     // top: 40%;
-//     // left: 60%;
-}
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
 
-.container__text h1 {
-    display: inline;
-    font-family: Myriad;
-    font-weight: 600;
-    text-align: start;
-    margin-bottom: 0;
-}
-
-.container__text a {
-    text-decoration: none;
-    font-family: Myriad;
-    font-size: large;
-    background-color: map-get($colors, body-dark);
-    color: map-get($colors, primary);
-    padding: 8px 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all 0.2s;
-    &:hover {
-        background-color: map-get($colors, primary-dark);
+    .img__404 {
+        width: 50%;
+        height: auto;
+    }
+    h1 {
+        color: map-get($colors, primary );
+        margin: 0;
+        text-align: center;
+        display: block;
+        width: 50%;
+    }
+    .button {
+        background-color: map-get($colors, primary);
+        color: map-get($colors, primary-dark);
+        border-radius: 18px;
+        padding: 8px 17px 8px 17px;
+        text-decoration: none;
+        transition: all .5s;
+        &:hover {
+            background-color: map-get($colors, primary-dark);
+            color: map-get($colors, primary);
+        }
+    }
+    @media screen and (max-width: 992px) {
+        .img__404 {
+            width: 100%;
+            height: auto;
+        }
+        .contenedor h1 {
+            width: 75%;
+        }
     }
 }
-
-// @media screen and (min-width:992px) {
-//     .container__text {
-//         position: absolute;
-//         right: 20px;
-//     }
-// }
-
-// @media screen and (min-width:768px) {
-//     .container__text {
-//         top: 150px;
-//         left: 500px
-//     }
-// }
-
-// @media screen and (max-width:576px) {
-//     .container__text h1 {
-//         text-align: start;
-//         margin-bottom: 2rem;
-//     }
-// }
